tests/fixtures/errors/undef_ident.z
# E0008-ish: reference to an undefined identifier.
main: function is {
    y: x
}
